frontend  url chnage

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,6 +1,6 @@
-PORT = 4001
+PORT = 4000
 NODE_ENV = PRODUCTION
-FRONTEND_URL ="http://localhost:3000"
+FRONTEND_URL ="https://goodthingsecommerce.netlify.app/"
 
 DB_LOCAL_URI = mongodb://localhost:27017/good_things
 DB_URI = mongodb+srv://ashosilva:1fVrSGXQrlsmoOFx@goodthingscluster.mpxfwb9.mongodb.net/good_things?retryWrites=true&w=majority
